gcc/testsuite/rust/rustc/ui/impl-trait/rpit-not-sized_dg.rs
fn foo() -> impl ?Sized {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
    ()
}

fn main() {}

